complete view user history (view product like, order history) and update pagination

--- a/public/admin/setup.css
+++ b/public/admin/setup.css
@@ -8,6 +8,10 @@
   list-style: none;
   font-family: var(--primary-font-family);
 }
+body.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
 .body {
   display: flex;
   height: 100%;
