--- a/views/client/partials/breadcrumb.view.ejs
+++ b/views/client/partials/breadcrumb.view.ejs
@@ -1,4 +1,4 @@
-<div class="mt-md-5 mt-0 d-block w-100 banner-page">
+<div class="d-block w-100 banner-page">
   <div
     class="banner-page-box"
     style="background-image: url('/client/images/breadcrumb.jpg'); background-repeat: no-repeat"
