--- a/views/client/partials/footer.view.ejs
+++ b/views/client/partials/footer.view.ejs
@@ -22,7 +22,7 @@
               <a href="/about" class="content-font footer-about-link">Dịch vụ</a>
             </li>
             <li class="footer-about-item">
-              <a href="/about" class="content-font footer-about-link">Liên hệ & Giúp đỡ</a>
+              <a href="/contact" class="content-font footer-about-link">Liên hệ & Giúp đỡ</a>
             </li>
           </ul>
         </div>
