--- a/views/client/pages/product/productDetail.view.ejs
+++ b/views/client/pages/product/productDetail.view.ejs
@@ -228,7 +228,7 @@
                     >
                   </div>
                 </div>
-                <div class="content-font card-title mt-1">
+                <div class="content-font overflow-x-hidden text-nowrap card-title mt-1">
                   <% if(product.title.length > 25) { %> <%= product.title.slice(0, 25) + '...' %> <%
                   } else { %> <%= product.title %> <% } %>
                 </div>
